# emuBro

./: .clineignore  .codexignore  .gitignore  .gitmodules  BLOG_POST_INTRODUCING_EMUBRO.md  CLAUDE.MD  ClassDiagramImpl.ucls  ClassDiagramNew.ucls  LICENSE  README.md  changelog.txt  electron-builder.config.js  game-session-overlay.html  gamelist.csv  gamelist.txt  gamelist.xml  i18n.js  index.html  main.js  package.json  pom.xml  preload.js  ps1-handler.js  psx.json  renderer.js  todo.txt  translations-loader.js  update.properties  webpack.config.js
.clinerules/: memory-bank.md
assets/: icon.icns
community-themes/: index.js
desktop/: .gitignore  index.html  package.json
flatpak/: com.emubro.desktop.desktop  com.emubro.desktop.metainfo.xml  com.emubro.desktop.yml
impl/: PluginManagerImpl.java
js/: about-dialog.js  community-manager.js  database-manager.js  docking-manager.js  drag-drop-manager.js  game-manager.js  game-session-overlay-window.js  game-session-overlay.js  gamepad-binding-utils.js  (+12 more)
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: app_core.rs  main.rs  overlay_sidecar.rs  single_instance.rs
tauri/src-tauri/src/app_core/invoke/: community.rs  game_session.rs  mod.rs  state_config.rs  updates.rs  window.rs
tauri/src-tauri/src/app_core/invoke/library_actions/: launch.rs  mod.rs  tags.rs
tauri/src-tauri/src/bridge_extensions/: covers.rs  launcher.rs  locales.rs  memory_cards.rs  mod.rs  monitor.rs  remote.rs  system_tools.rs  youtube.rs
tauri/src-tauri/src/bridge_extensions/core_base/: basics.rs  dialogs_scan.rs  launch.rs  mod.rs  platforms.rs
tauri/src-tauri/src/bridge_extensions/core_base/state/: legacy.rs  mod.rs  paths.rs
tauri/src-tauri/src/bridge_extensions/migration/: emulator_config.rs  mod.rs  relocation.rs  session.rs  theme_upload.rs  web_source.rs
tauri/src-tauri/src/bridge_extensions/migration/downloads/: installer.rs  mod.rs
tauri/src-tauri/src/bridge_extensions/suggestions/: channels.rs  mod.rs  provider.rs  tool_draft.rs
tauri/src-tauri/src/bridge_extensions/suggestions/relay/: core.rs  http.rs  server.rs
(+1042 files in other folders)
