[package]
name = "emubro_tauri"
version = "0.1.0"
description = "emuBro Desktop (Tauri)"
authors = ["sysout"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
