[package]
name = "emubro_tauri"
version = "0.1.0"
description = "emuBro Desktop (Tauri)"
authors = ["sysout"]
license = "MIT"
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
open = "5.3"
rfd = "0.15"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2.2", default-features = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
