[package]
name = "emubro_tauri"
version = "0.1.0"
description = "emuBro Desktop (Tauri)"
authors = ["sysout"]
license = "MIT"
edition = "2021"

[package.metadata]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
open = "5.3"
rfd = "0.15"
walkdir = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = { version = "2.2", default-features = true }
base64 = "0.22"
ureq = { version = "2.12", features = ["json"] }
urlencoding = "2.1"
tiny_http = "0.12"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
